# plane-game

./: .gitignore  CMakeLists.txt  README.md
engine/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Defines.h  Engine.cpp  Engine.h  IGame.cpp  IGame.h  KeyManager.cpp  KeyManager.h  Log.cpp  Log.h  Profiler.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  engine_export.h
src/: CMakeLists.txt  Game.cpp  Game.h  GameConfig.h  main.cpp
src/components/: BasicComponent.h  DrawingComponent.h  IComponent.h  PlayerComponent.h
src/scenes/: IScene.h  SceneGame.cpp  SceneGame.h  SceneMainMenu.cpp  SceneMainMenu.h
src/systems/: BulletSystem.cpp  BulletSystem.h  CollisionSystem.h  MenuSystem.h  MovementSystem.h  RenderSystem.h  SystemManager.h  TransitionSystem.cpp  TransitionSystem.h
src/systems/game/: TransitionStateMachine.h  TransitionSystem.cpp  TransitionSystem.h
